# kairo

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: agent.rs  api.rs  lib.rs  main.rs  ws.rs
backend/tests/: agent_tests.rs
frontend/: tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/codex/: AutomationsPanel.tsx  ChatPanel.tsx  CodexApp.tsx  DiffPanel.tsx  Header.tsx  InboxPanel.tsx  NewAutomationDialog.tsx  NewSkillDialog.tsx  NewThreadPanel.tsx  PlaygroundPanel.tsx  Sidebar.tsx  SkillsPanel.tsx  StartConversationPanel.tsx  TrafficLights.tsx  TypewriterText.tsx
frontend/src/hooks/: useAgents.ts  useTypewriter.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: agentService.ts
